--- a/summaries/summary4_raw_hic.Rmd
+++ b/summaries/summary4_raw_hic.Rmd
@@ -32,5 +32,10 @@ Where $M$ is the raw matrix and $M^*$ the normalized matrix.
 
 The normalization algorithm did not converge for all entries, so there are missing values in the vector. The values that could not be normalized are considered as 0 in the matrix (i.e. not listed in sparse format).
 
+#2. TAD boundaries
+
+Since I already have a set of TADs, there is no need to compute the insulation score to find the TAD borders at local minima. I use directly the set of TADs to find the borders and slide from these coordinates until the point where the interactions decrease below a threshold.
+
+
 ```{r matplot, echo=F, warning=F, error=F, fig.height=4, fig.width=5}
 ```
