parallelized script for boundariries generation is complete, but not very efficient. Works locally. Need to apply mods to send it on vital-IT

--- a/summaries/summary4_raw_hic.Rmd
+++ b/summaries/summary4_raw_hic.Rmd
@@ -34,7 +34,11 @@ The normalization algorithm did not converge for all entries, so there are missi
 
 #2. TAD boundaries
 
-Since I already have a set of TADs, there is no need to compute the insulation score to find the TAD borders at local minima. I use directly the set of TADs to find the borders and slide from these coordinates until the point where the interactions decrease below a threshold.
+Since I already have a set of TADs, there is no need to compute the insulation score to find the TAD borders at local minima. The procedure I use to define TAD boundaries is:
+
+1. Compute the maximum interactions value for each TAD.
+2. slide from the TAD borders until the number of interaction reaches a portion of this value (e.g. 10%)
+3. define the areas between these points as boundaries.
 
 
 ```{r matplot, echo=F, warning=F, error=F, fig.height=4, fig.width=5}
