--- a/summaries/summary6_redirection.Rmd
+++ b/summaries/summary6_redirection.Rmd
@@ -6,7 +6,43 @@ output: pdf_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+setwd("/Users/cmatthe5/Documents/First_step/data/")
+whole_gat_nuc <- read.table("GAT/out/whole_nuc_gat_results.txt",header=T)
+whole_gat_seg <- read.table("GAT/out/whole_seg_gat_results.txt",header=T)
+
+bins2gene_nuc<-droplevels(whole_gat_nuc[whole_gat_nuc$segment=="short5bins",])
+bins2gene_nuc$track <- as.character(bins2gene_nuc$track)
+bins2gene_nuc$track <- factor(bins2gene_nuc$track,levels = c(1:20))
+
+gene2bins_nuc<-droplevels(whole_gat_nuc[whole_gat_nuc$annotation=="short5bins",])
+gene2bins_nuc$annottrack <- as.character(gene2bins_nuc$annottrack)
+gene2bins_nuc$annottrack <- factor(gene2bins_nuc$annottrack,levels = c(1:20))
+
+bs2gene_nuc<-droplevels(whole_gat_nuc[whole_gat_nuc$segment=="bindingsite",])
+gene2bs_nuc<-droplevels(whole_gat_nuc[whole_gat_nuc$annotation=="bindingsite",])
+
+nice_workspace <- c(wholegenome= "Whole genome",intergenic="Intergenic space",allpc="Protein-coding space", lincRNA="Expressed lincRNAs space")
+
+bins2gene_seg<-droplevels(whole_gat_seg[whole_gat_seg$segment=="short5bins",])
+bins2gene_seg$track <- as.character(bins2gene_seg$track)
+bins2gene_seg$track <- factor(bins2gene_seg$track,levels = c(1:20))
+
+gene2bins_seg<-droplevels(whole_gat_seg[whole_gat_seg$annotation=="short5bins",])
+gene2bins_seg$annottrack <- as.character(gene2bins_seg$annottrack)
+gene2bins_seg$annottrack <- factor(gene2bins_seg$annottrack,levels = c(1:20))
+
+bs2gene_seg<-droplevels(whole_gat_seg[whole_gat_seg$segment=="bindingsite",])
+gene2bs_seg<-droplevels(whole_gat_seg[whole_gat_seg$annotation=="bindingsite",])
+
+library(ggplot2);library(gridExtra)
+elements_names <- c(
+  `pr` = "promoter",
+  `prb` = "promoter + gene body",
+  `elinc` = "elincRNA",
+  `nelinc` = "non-elincRNA",
+  `epc` = "epc gene",
+  `nepc` = "non-epc gene"
+)
 ```
 
 #Introduction
@@ -19,7 +55,7 @@ The largely different gene length between protein-coding genes and lincRNAs made
 
    * __Definition of enhancer-associated genes__: LincRNAs and protein-coding genes whose promoter regions (or promoter region + gene body) was overlapping enhancer elements (defined by histone modification marks) were defined as elincRNAs or epc-genes. The others are considered non-enhancer-associated. Promoter regions have been defined as the region of 1kb around the TSS of each gene.
    
-Gene type|region|Original set|Overlaps|TAD-bound genes
+Gene type|region|Original set|Overlaps|enhancer-associated genes
 ---------|------|------------|--------|---
 lincRNA|pro|2510|323|274 (`r round((100*274)/2510,1)`%)
 lincRNA|pro+bod|2510|1544|611 (`r round((100*611)/2510,1)`%)
@@ -32,11 +68,10 @@ protein-coding|pro+bod|14846|34808|8486 (`r round((100*8486)/14846,1)`%)
    
    * __Transcription factors binding sites__: Chip-seq data for SMC1, SMC3, RAD21, SA1, SA2 and CTCF from the ENCODE website was used.
 
-#Results
 
-1. Enrichment at TAD boundaries
+#Enrichment at TAD boundaries
 
-Several GAT tests were performed using different combinations of segments, annotations and workspace:
+Several GAT tests were performed using different combinations of segments, annotations and workspace. Both nucleotide overlap and number of overlapping segments were used as a  measure:
 
 Workspace|Segment|Annotation
 ---------|-------|----------
@@ -62,7 +97,98 @@ pr = promoter region
 
 prb = promoter region and body
 
+##Nucleotides overlap
 
+###Analyses using TAD bins
 
+```{r TAD_bins_enrich_nuc, echo=F, warning=F, fig.height=9,fig.width=9}
 
+for(w in c("wholegenome","intergenic","allpc","lincRNA")){
+  b2g <- ggplot(data=bins2gene_nuc[bins2gene_nuc$workspace==w,],aes(x=track,y=fold,fill=log10(qval)))+
+    scale_fill_continuous(low="#66bb66",high="#bb6666",guide = "colourbar",name= "Log10\nq-value")+
+    geom_bar(stat="identity")+theme_bw()+
+    facet_grid(element~annotation,labeller = as_labeller(elements_names))+
+    ggtitle(paste0(nice_workspace[w],": \nEnrichment of TAD bins in lincRNAs and pcgenes"))+
+    xlab("TAD bins") + ylab("Fold enrichment")+
+    theme(axis.text = element_text(size = rel(0.4)))
+  
+  g2b <- ggplot(data=gene2bins_nuc[gene2bins_nuc$workspace==w,],aes(x=annottrack,y=fold,fill=log10(qval)))+
+    scale_fill_continuous(low="#66bb66",high="#bb6666",guide = "colourbar",name= "Log10\nq-value")+
+    geom_bar(stat="identity")+theme_bw()+
+    facet_grid(element~segment,labeller = as_labeller(elements_names))+
+    ggtitle(paste0(nice_workspace[w],": \nEnrichment of lincRNAs and pc genes in TAD bins"))+
+    xlab("TAD bins") + ylab("Fold enrichment")+
+    theme(axis.text = element_text(size = rel(0.4)))
+  grid.arrange(b2g,g2b)
+}
 
+```
+
+###Analyses using CTCF/Cohesin binding sites
+
+```{r bindingsite_enrich_nuc, echo=F, warning=F, fig.height=7,fig.width=9}
+
+ggplot(data=bs2gene_nuc,aes(x=workspace,y=fold,fill=log10(qval)))+
+  scale_fill_continuous(low="#66bb66",high="#bb6666",guide = "colourbar",name= "Log10 q-value")+
+  geom_bar(stat="identity")+theme_bw()+
+  facet_grid(element~annotation,labeller = as_labeller(elements_names))+
+  ggtitle("Enrichment of CTCF/cohesin binding sites in lincRNAs and pcgenes")+
+  xlab("Workspace") + ylab("Fold enrichment")+theme(axis.text.x=element_text(angle = -90, hjust = 0))
+
+ggplot(data=gene2bs_nuc,aes(x=workspace,y=fold,fill=log10(qval)))+
+  scale_fill_continuous(low="#66bb66",high="#bb6666",guide = "colourbar",name= "Log10 q-value")+
+  geom_bar(stat="identity")+theme_bw()+
+  facet_grid(element~segment,labeller = as_labeller(elements_names))+
+  ggtitle("Enrichment of lincRNAs and pc genes in CTCF/cohesin binding sites")+
+  xlab("Workspace") + ylab("Fold enrichment")+theme(axis.text.x=element_text(angle = -90, hjust = 0))
+#grid.arrange(bs2g,g2bs)
+
+```
+
+##Segments overlap
+
+###Analyses using TAD bins
+
+```{r TAD_bins_enrich_seg, echo=F, warning=F, fig.height=9,fig.width=9}
+
+for(w in c("wholegenome","intergenic","allpc","lincRNA")){
+  b2g <- ggplot(data=bins2gene_seg[bins2gene_seg$workspace==w,],aes(x=track,y=fold,fill=log10(qval)))+
+    scale_fill_continuous(low="#66bb66",high="#bb6666",guide = "colourbar",name= "Log10\nq-value")+
+    geom_bar(stat="identity")+theme_bw()+
+    facet_grid(element~annotation,labeller = as_labeller(elements_names))+
+    ggtitle(paste0(nice_workspace[w],": \nEnrichment of TAD bins in lincRNAs and pcgenes"))+
+    xlab("TAD bins") + ylab("Fold enrichment")+
+    theme(axis.text = element_text(size = rel(0.4)))
+  
+  g2b <- ggplot(data=gene2bins_seg[gene2bins_seg$workspace==w,],aes(x=annottrack,y=fold,fill=log10(qval)))+
+    scale_fill_continuous(low="#66bb66",high="#bb6666",guide = "colourbar",name= "Log10\nq-value")+
+    geom_bar(stat="identity")+theme_bw()+
+    facet_grid(element~segment,labeller = as_labeller(elements_names))+
+    ggtitle(paste0(nice_workspace[w],": \nEnrichment of lincRNAs and pc genes in TAD bins"))+
+    xlab("TAD bins") + ylab("Fold enrichment")+
+    theme(axis.text = element_text(size = rel(0.4)))
+  grid.arrange(b2g,g2b)
+}
+
+```
+
+###Analyses using CTCF/Cohesin binding sites
+
+```{r bindingsite_enrich_seg, echo=F, warning=F, fig.height=7,fig.width=9}
+
+ggplot(data=bs2gene_seg,aes(x=workspace,y=fold,fill=log10(qval)))+
+  scale_fill_continuous(low="#66bb66",high="#bb6666",guide = "colourbar",name= "Log10 q-value")+
+  geom_bar(stat="identity")+theme_bw()+
+  facet_grid(element~annotation,labeller = as_labeller(elements_names))+
+  ggtitle("Enrichment of CTCF/cohesin binding sites in lincRNAs and pcgenes")+
+  xlab("Workspace") + ylab("Fold enrichment")+theme(axis.text.x=element_text(angle = -90, hjust = 0))
+
+ggplot(data=gene2bs_seg,aes(x=workspace,y=fold,fill=log10(qval)))+
+  scale_fill_continuous(low="#66bb66",high="#bb6666",guide = "colourbar",name= "Log10 q-value")+
+  geom_bar(stat="identity")+theme_bw()+
+  facet_grid(element~segment,labeller = as_labeller(elements_names))+
+  ggtitle("Enrichment of lincRNAs and pc genes in CTCF/cohesin binding sites")+
+  xlab("Workspace") + ylab("Fold enrichment")+theme(axis.text.x=element_text(angle = -90, hjust = 0))
+#grid.arrange(bs2g,g2bs)
+
+```
