--- a/summaries/summary7_gat_tweaks.Rmd
+++ b/summaries/summary7_gat_tweaks.Rmd
@@ -50,7 +50,7 @@ Here I increased the sampling of GAT to 10000 instead of 1000 to give it more po
 
 #Analysis using TAD bins
 
-```{r TAD_bins_enrich, echo=F, warning=F, fig.height=9,fig.width=9}
+```{r TAD_bins_enrich, echo=F, results="asis", warning=F, fig.height=9,fig.width=9}
 
 for(w in c("wholegenome","intergenic","allpc","lincRNA")){
   b2g <- ggplot(data=bins2gene_seg[bins2gene_seg$workspace==w,],aes(x=track,y=fold,fill=log10(qval)))+
@@ -69,6 +69,7 @@ for(w in c("wholegenome","intergenic","allpc","lincRNA")){
     xlab("TAD bins") + ylab("Fold enrichment")+
     theme(axis.text = element_text(size = rel(0.4)))
   grid.arrange(b2g,g2b)
+  cat("\n\\newpage\n")
 }
 
 ```
@@ -137,3 +138,9 @@ ggplot(data=gene_SMC3_seg,aes(x=workspace,y=fold,fill=log10(qval)))+
 
 ```
 
+#Conclusions
+
+All promoters seem to be enriched at TAD borders, although the enrichment is not significant for elincRNA promoters.
+elincRNA promoters are strongly depleted in the middle of the TADs (bin 5). epc gene bodies are strongly enriched throughout TADs compared to all other genes types. 
+
+Results seem rather consistent across binding sites: elincRNA promoters are strongly enriched, followed by epc promoters. epc gene bodies are strongly enriched inside binding sites, but the inverse does not hold(enrichment of binding sites in epc gene bodies).
